tests/ui/traits/const-traits/ice-149083-async-in-const-impl.rs
//@ edition:2024

#![feature(const_trait_impl)]
struct Foo;
const impl Foo {
    async fn e() {}
    //~^ ERROR async functions are not allowed in `const` impls
}
fn main() {}
